# tama

./: .gitignore  README.md  config.default.toml  pyproject.toml
data/: cunt.txt  theo.txt
plugins/: attacks.py  ehentai.py  eightball.py  factoids.py  facts.py  flip.py  foods.py  fortune.py  gaming.py  google.py  penis.py  seen.py  steam_store.py  time_plugin.py  wolframalpha.py  youtube.py
src/tama/: __main__.py
src/tama/config/: reader.py  schema.py
src/tama/core/: acl.py  bot.py  client_proxy.py  db.py
src/tama/core/plugins/: api.py  api_internal.py  loader.py  plugin.py
src/tama/core/plugins/builtins/: help.py  irc.py
src/tama/irc/: client.py  command.py  ctcp.py  event.py  exc.py  user.py
src/tama/irc/stream/: __init__.py  payloads.py
src/tama/util/: irc.py  trie.py
src/tama/util/legacy/: __init__.py  formatting.py  http.py  timeformat.py
