[project]
name = "tama"
authors = [
    {name = "Alex A", email = "alex@meido.ninja"}
]
description = "IRC bot"
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.14"
dependencies = [
    "aiodns>=4.0",
    "aiohttp[speedups]>=3.13",
    "isodate>=0.7",
    "faust-cchardet>=2.1",
    "requests>=2.32",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "tama.__version__"}